Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 <p>Last updated 8:09pm.</p>
 
+
+#downloads { display:none; }
+
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ojkelly/spillti.me">IT&#39;S ON</a> is maintained by <a href="https://github.com/ojkelly">ojkelly</a>.</span>
 
