--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +18,8 @@
     <link href="style.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!--[if lt IE 9]>
+    <script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -33,12 +33,27 @@
 
 <div class="container">
 
-    <div class="starter-template">
-        <h1>IT'S ON</h1>
-        <p class="lead">Malcom Turnbull has challenged Tony Abbot.</p>
-    </div>
+    <div class="page-header">
+        <h1 class="text-center" style="font-size: 12em"><strong>IT'S ON</strong></h1>
 
-</div><!-- /.container -->
+        <p class="lead text-center">Malcom Turnbull has challenged Tony Abbot.</p>
+    </div>
+    <hr>
+    <ul class="row">
+        <li><strong>SPILLCON 1 - It's on</strong></li>
+
+        <li><strong>SPILLCON 2 - Any moment now, there's gonna be a spill</strong></li>
+
+        <li><strong>SPILLCON 3 - Okay, maybe they do have the numbers</strong></li>
+
+        <li><strong>SPILLCON 4 - Someone backgrounded the media, but we don't think they have the numbers</strong>
+        </li>
+
+        <li><strong>SPILLCON 5 - No chance, it's good government time</strong></li>
+    </ul>
+
+</div>
+<!-- /.container -->
 
 
 <!-- Bootstrap core JavaScript
@@ -49,10 +64,19 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m)
+    {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function ()
+        {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-64333379-2', 'auto');
     ga('send', 'pageview');
