--- a/index.html
+++ b/index.html
@@ -39,19 +39,29 @@
         <p class="lead text-center">Malcom Turnbull has challenged Tony Abbot.</p>
     </div>
     <hr>
-    <ul class="row">
-        <li><strong>SPILLCON 1 - It's on</strong></li>
-
-        <li><strong>SPILLCON 2 - Any moment now, there's gonna be a spill</strong></li>
-
-        <li><strong>SPILLCON 3 - Okay, maybe they do have the numbers</strong></li>
-
-        <li><strong>SPILLCON 4 - Someone backgrounded the media, but we don't think they have the numbers</strong>
-        </li>
-
-        <li><strong>SPILLCON 5 - No chance, it's good government time</strong></li>
-    </ul>
-
+    <div class="container">
+        <div class="col-sm-6 col-sm-offset-3">
+            <ul class="list-group">
+                <li class="list-group-item active">SPILLCON 1 - It's on</li>
+                <li class="list-group-item">SPILLCON 2 - Any moment now, there's gonna be a spill</li>
+                <li class="list-group-item">SPILLCON 3 - Okay, maybe they do have the numbers</li>
+                <li class="list-group-item">SPILLCON 4 - Someone backgrounded the media, but we don't think they have
+                    the numbers
+                </li>
+                <li class="list-group-item">SPILLCON 5 - No chance, it's good government time</li>
+            </ul>
+        </div>
+    </div>
+    <div class="text-center">
+        <small>
+            Last updated: <em>8:32pm</em>
+        </small>
+    </div>
+    <div class="text-center">
+        <small>
+            Created by <a href="https://twitter.com/ojkelly">@ojkelly</a>
+        </small>
+    </div>
 </div>
 <!-- /.container -->
 
