--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>IT'S ON</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">-->
@@ -36,7 +36,7 @@
     <div class="page-header">
         <h1 class="text-center" style="font-size: 12em"><strong>IT'S ON</strong></h1>
 
-        <p class="lead text-center">Malcom Turnbull has challenged Tony Abbot.</p>
+        <p class="lead text-center">Malcom Turnbull has challenged Tony Abbott.</p>
     </div>
     <hr>
     <div class="container">
