--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div class="container">
         <div class="col-sm-6 col-sm-offset-3">
             <ul class="list-group">
-                <li class="list-group-item active"><strong>SPILLCON 1</strong> It's on</li>
-                <li class="list-group-item"><strong>SPILLCON 2</strong> Any moment now, there's gonna be a spill</li>
-                <li class="list-group-item"><strong>SPILLCON 3</strong> Okay, maybe they do have the numbers</li>
-                <li class="list-group-item"><strong>SPILLCON 4</strong> Someone backgrounded the media, but we don't think they have
+                <li class="list-group-item active"><strong>SPILLCON 1:</strong> It's on</li>
+                <li class="list-group-item"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
+                <li class="list-group-item"><strong>SPILLCON 3:</strong> Okay, maybe they do have the numbers</li>
+                <li class="list-group-item"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
                     the numbers
                 </li>
-                <li class="list-group-item"><strong>SPILLCON 5</strong> No chance, it's good government time</li>
+                <li class="list-group-item"><strong>SPILLCON 5:</strong> No chance, it's good government time</li>
             </ul>
         </div>
     </div>
