--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="list-group-item"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
                     the numbers
                 </li>
-                <li class="list-group-item"><strong>SPILLCON 5:</strong> No chance, it's good government time</li>
+                <li class="list-group-item"><strong>SPILLCON 5:</strong> No chance, it's time for good government</li>
             </ul>
         </div>
     </div>
