--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <p class="lead text-center">Malcom Turnbull has challenged Tony Abbott.</p>
     </div>
     <hr>
+    <img src="tb.png">
+    <hr>
     <div class="container">
         <div class="col-sm-6 col-sm-offset-3">
             <ul class="list-group">
