--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 <div class="container">
 
     <div class="page-header">
-        <h1 class="text-center" style="font-size: 12em"><strong>IT'S ON</strong></h1>
+        <h1 class="text-center" style="font-size: 12em"><strong>It was on</strong></h1>
 
         <p class="lead text-center">Malcom Turnbull has challenged Tony Abbott.</p>
+        <p class="lead text-center"><strong>Malcom won</strong>.</p>
     </div>
     <hr>
     <img src="tb.png">
@@ -44,13 +45,13 @@
     <div class="container">
         <div class="col-sm-6 col-sm-offset-3">
             <ul class="list-group">
-                <li class="list-group-item active"><strong>SPILLCON 1:</strong> It's on</li>
+                <li class="list-group-item "><strong>SPILLCON 1:</strong> It's on</li>
                 <li class="list-group-item"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
                 <li class="list-group-item"><strong>SPILLCON 3:</strong> Okay, maybe they do have the numbers</li>
                 <li class="list-group-item"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
                     the numbers
                 </li>
-                <li class="list-group-item"><strong>SPILLCON 5:</strong> No chance, it's time for good government</li>
+                <li class="list-group-item active"><strong>SPILLCON 5:</strong> No chance, it's time for good government</li>
             </ul>
         </div>
     </div>
