--- a/index.html
+++ b/index.html
@@ -30,17 +30,12 @@
 <div class="container">
 
     <div class="page-header">
-        <h1 class="text-center" style="font-size: 12em"><strong>It was on</strong></h1>
+        <h1 class="text-center" style="font-size: 6em"><strong>It was on</strong></h1>
 
         <p class="lead text-center">Malcom Turnbull has challenged Tony Abbott.</p>
         <p class="lead text-center"><strong>Malcom won</strong>.</p>
     </div>
     <hr>
-    <img src="tb.png">
-    <a href="http://www.abc.net.au/news/abcnews24/"><small>ABC News 24</small></a>
-    <hr>
-    <br>
-    <br>
     <br>
     <div class="container">
         <div class="col-sm-6 col-sm-offset-3">
@@ -57,7 +52,7 @@
     </div>
     <div class="text-center">
         <small>
-            Last updated: <em>9:00pm</em>
+            Last updated: <em>15th September 2015</em>
         </small>
     </div>
     <div class="text-center">
