--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>SPILLCON 5 - Spill Time</title>
+    <title>SPILLCON 5 - Floors are clean | Spill Time</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">-->
@@ -46,7 +46,7 @@
                 <li class="list-group-item"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
                     the numbers
                 </li>
-                <li class="list-group-item active"><strong>SPILLCON 5:</strong> No chance, it's time for good government</li>
+                <li class="list-group-item active"><strong>SPILLCON 5:</strong> Floors are clean</li>
             </ul>
         </div>
     </div>
