--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>SPILLCON 5 - Floors are clean | Spill Time</title>
+    <title>SPILLCON 4 - Watch this space | Spill Time</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">-->
@@ -30,10 +30,9 @@
 <div class="container">
 
     <div class="page-header">
-        <h1 class="text-center" style="font-size: 6em"><strong>It was on</strong></h1>
+        <h1 class="text-center" style="font-size: 6em"><strong>Watch this space</strong></h1>
 
-        <p class="lead text-center">Malcom Turnbull has challenged Tony Abbott.</p>
-        <p class="lead text-center"><strong>Malcom won</strong>.</p>
+        <p class="lead text-center">Malcom Turnbull's leadership looks shaky if the Government doesn't get a majority.</p>
     </div>
     <hr>
     <br>
@@ -43,10 +42,10 @@
                 <li class="list-group-item "><strong>SPILLCON 1:</strong> It's on</li>
                 <li class="list-group-item"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
                 <li class="list-group-item"><strong>SPILLCON 3:</strong> Okay, maybe they do have the numbers</li>
-                <li class="list-group-item"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
+                <li class="list-group-item active"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
                     the numbers
                 </li>
-                <li class="list-group-item active"><strong>SPILLCON 5:</strong> Floors are clean</li>
+                <li class="list-group-item"><strong>SPILLCON 5:</strong> Floors are clean</li>
             </ul>
         </div>
     </div>
