--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="text-center">
         <small>
-            Last updated: <em>15th September 2015</em>
+            Last updated: <em>3rd July 2016</em>
         </small>
     </div>
     <div class="text-center">
