--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
 <div class="container">
 
     <div class="page-header">
+        <h1 class="text-center" style="font-size: 1em">Is it on?</h1>
         <h1 class="text-center" style="font-size: 6em"><strong>Watch this space</strong></h1>
 
         <p class="lead text-center">Malcom Turnbull's leadership looks shaky if the Government doesn't get a majority.</p>
+        
+        <a class="twitter-share-button"
+            href="https://twitter.com/intent/tweet?text=It's not on yet, but watch this space http://spillti.me"
+            data-size="large">
+            Tweet</a>
     </div>
     <hr>
     <br>
@@ -42,8 +48,7 @@
                 <li class="list-group-item "><strong>SPILLCON 1:</strong> It's on</li>
                 <li class="list-group-item"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
                 <li class="list-group-item"><strong>SPILLCON 3:</strong> Okay, maybe they do have the numbers</li>
-                <li class="list-group-item active"><strong>SPILLCON 4:</strong> Someone backgrounded the media, but we don't think they have
-                    the numbers
+                <li class="list-group-item active"><strong>SPILLCON 4:</strong> Rumours, rumours, rumours
                 </li>
                 <li class="list-group-item"><strong>SPILLCON 5:</strong> Floors are clean</li>
             </ul>
@@ -93,5 +98,21 @@
     ga('send', 'pageview');
 
 </script>
+<script>window.twttr = (function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0],
+t = window.twttr || {};
+if (d.getElementById(id)) return t;
+js = d.createElement(s);
+js.id = id;
+js.src = "https://platform.twitter.com/widgets.js";
+fjs.parentNode.insertBefore(js, fjs);
+
+t._e = [];
+t.ready = function(f) {
+t._e.push(f);
+};
+
+return t;
+}(document, "script", "twitter-wjs"));</script>
 </body>
 </html>
