--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 
         <p class="lead text-center">Malcom Turnbull's leadership looks shaky if the Government doesn't get a majority.</p>
         
-        <a class="twitter-share-button"
+        <p class="text-center">
+            <a class="twitter-share-button"
             href="https://twitter.com/intent/tweet?text=It's not on yet, but watch this space http://spillti.me"
             data-size="large">
             Tweet</a>
+        </p>
     </div>
     <hr>
     <br>
@@ -48,7 +50,7 @@
                 <li class="list-group-item "><strong>SPILLCON 1:</strong> It's on</li>
                 <li class="list-group-item"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
                 <li class="list-group-item"><strong>SPILLCON 3:</strong> Okay, maybe they do have the numbers</li>
-                <li class="list-group-item active"><strong>SPILLCON 4:</strong> Rumours, rumours, rumours
+                <li class="list-group-item active"><strong>SPILLCON 4:</strong> It's a bit slippery
                 </li>
                 <li class="list-group-item"><strong>SPILLCON 5:</strong> Floors are clean</li>
             </ul>
