--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 <div class="container">
 
     <div class="page-header">
-        <h1 class="text-center" style="font-size: 1em">Is it on?</h1>
+        <h1 class="text-center" style="font-size: 1em;">Is it on?</h1>
         <h1 class="text-center" style="font-size: 6em"><strong>Watch this space</strong></h1>
 
         <p class="lead text-center">Malcom Turnbull's leadership looks shaky if the Government doesn't get a majority.</p>
         
-        <p class="text-center">
+        <p class="text-center" style="user-select:none;">
             <a class="twitter-share-button"
             href="https://twitter.com/intent/tweet?text=It's not on yet, but watch this space"
             data-size="large">
@@ -44,7 +44,7 @@
     </div>
     <hr>
     <br>
-    <div class="container">
+    <div class="container" style="user-select:none;">
         <div class="col-sm-6 col-sm-offset-3">
             <ul class="list-group">
                 <li class="list-group-item "><strong>SPILLCON 1:</strong> It's on</li>
@@ -56,12 +56,12 @@
             </ul>
         </div>
     </div>
-    <div class="text-center">
+    <div class="text-center" style="user-select:none;">
         <small>
             Last updated: <em>3rd July 2016</em>
         </small>
     </div>
-    <div class="text-center">
+    <div class="text-center" style="user-select:none;">
         <small>
             Created by <a href="https://twitter.com/ojkelly">@ojkelly</a>
         </small>
