--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <p class="text-center" style="user-select:none;">
             <a class="twitter-share-button"
-            href="https://twitter.com/intent/tweet?text=It's not on yet, but watch this space"
+            href="https://twitter.com/intent/tweet?text=It's not on yet, but watch this space #libspill"
             data-size="large">
             Tweet</a>
         </p>
