--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <h1 class="text-center" style="font-size: 1em;">Is it on?</h1>
         <h1 class="text-center" style="font-size: 6em"><strong>Watch this space</strong></h1>
 
-        <p class="lead text-center">Malcom Turnbull's leadership looks shaky if the Government doesn't get a majority.</p>
+        <p class="lead text-center">30 bad Newspolls in a row?</p>
         
         <p class="text-center" style="user-select:none;">
             <a class="twitter-share-button"
-            href="https://twitter.com/intent/tweet?text=It's not on yet, but watch this space #libspill"
+            href="https://twitter.com/intent/tweet?text=It is on. #itsob #libspill"
             data-size="large">
             Tweet</a>
         </p>
@@ -48,9 +48,9 @@
         <div class="col-sm-6 col-sm-offset-3">
             <ul class="list-group">
                 <li class="list-group-item "><strong>SPILLCON 1:</strong> It's on</li>
-                <li class="list-group-item"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
+                <li class="list-group-item active"><strong>SPILLCON 2:</strong> Any moment now, there's gonna be a spill</li>
                 <li class="list-group-item"><strong>SPILLCON 3:</strong> Okay, maybe they do have the numbers</li>
-                <li class="list-group-item active"><strong>SPILLCON 4:</strong> It's a bit slippery
+                <li class="list-group-item"><strong>SPILLCON 4:</strong> It's a bit slippery
                 </li>
                 <li class="list-group-item"><strong>SPILLCON 5:</strong> Floors are clean</li>
             </ul>
