--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <div class="page-header">
         <h1 class="text-center" style="font-size: 1em;">Is it on?</h1>
-        <h1 class="text-center" style="font-size: 6em"><strong>Watch this space</strong></h1>
+        <h1 class="text-center" style="font-size: 6em"><strong> 30 bad Newspolls in a row?</strong></h1>
 
-        <p class="lead text-center">30 bad Newspolls in a row?</p>
+        <p class="lead text-center">Time to count your numbers.</p>
         
         <p class="text-center" style="user-select:none;">
             <a class="twitter-share-button"
@@ -58,7 +58,7 @@
     </div>
     <div class="text-center" style="user-select:none;">
         <small>
-            Last updated: <em>3rd July 2016</em>
+            Last updated: <em>5th April 2018</em>
         </small>
     </div>
     <div class="text-center" style="user-select:none;">
